(library
 (name belenios_core)
 (public_name belenios-lib.core)
 (libraries
  (re_export base64)
  hex
  digestif
  (re_export yojson)
  biniou
  (re_export atdgen-runtime)
  (re_export re)
  (re_export belenios-platform))
 (modules_without_implementation question_sigs trustees_sig versioned_sig))

(rule
 (targets serializable_core_t.ml serializable_core_t.mli)
 (deps serializable_core.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets serializable_t.ml serializable_t.mli)
 (deps serializable.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets serializable_core_j.ml serializable_core_j.mli)
 (deps serializable_core.atd)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets serializable_j.ml serializable_j.mli)
 (deps serializable.atd)
 (action
  (run atdgen -j -j-std %{deps})))
