(library
 (name belenios_core)
 (public_name belenios-lib.core)
 (libraries
  (re_export base64)
  hex
  digestif
  (re_export yojson)
  biniou
  (re_export atdgen-runtime)
  (re_export re)
  (re_export belenios-platform))
 (modules_without_implementation question_sigs trustees_sig versioned_sig))

(include serializable.inc)

(rule
 (targets serializable_core_t.ml serializable_core_t.mli)
 (deps serializable_core.atd)
 (action
  (chdir
   %{workspace_root}
   (run atdgen -t %{deps}))))

(rule
 (targets serializable_core_j.ml serializable_core_j.mli)
 (deps serializable_core.atd)
 (action
  (chdir
   %{workspace_root}
   (run atdgen -j %{deps}))))
