(library
 (name belenios_core)
 (public_name belenios-lib.core)
 (libraries
  (re_export base64)
  hex
  digestif
  (re_export yojson)
  (re_export ppx_yojson_conv_lib)
  (re_export re)
  (re_export belenios-platform))
 (preprocess
  (pps ppx_yojson_conv))
 (modules_without_implementation question_sigs trustees_sig versioned_sig))
