(library
 (name belenios_question)
 (public_name belenios-lib.question)
 (modules_without_implementation types)
 (libraries yojson atdgen belenios_platform belenios_core))

(rule
 (targets question_h_t.ml question_h_t.mli)
 (deps question_h.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets question_nh_t.ml question_nh_t.mli)
 (deps question_nh.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets question_h_j.ml question_h_j.mli)
 (deps question_h.atd)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets question_nh_j.ml question_nh_j.mli)
 (deps question_nh.atd)
 (action
  (run atdgen -j -j-std %{deps})))
