(library
 (name belenios_question)
 (public_name belenios-lib.question)
 (modules_without_implementation types)
 (libraries belenios-lib.core))

(rule
 (targets question_h_t.ml question_h_t.mli)
 (deps question_h.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets question_nh_t.ml question_nh_t.mli)
 (deps question_nh.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets question_l_t.ml question_l_t.mli)
 (deps question_l.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets question_h_j.ml question_h_j.mli)
 (deps question_h.atd)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets question_nh_j.ml question_nh_j.mli)
 (deps question_nh.atd)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets question_l_j.ml question_l_j.mli)
 (deps question_l.atd)
 (action
  (run atdgen -j -j-std %{deps})))
