(library
 (name belenios_v1)
 (public_name belenios-lib.v1)
 (modules_without_implementation types)
 (libraries
  yojson
  atdgen
  belenios-platform
  belenios-lib.core
  belenios-lib.question))

(rule
 (targets serializable_t.ml serializable_t.mli)
 (deps serializable.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets serializable_j.ml serializable_j.mli)
 (deps serializable.atd)
 (action
  (run atdgen -j -j-std %{deps})))
