(library
 (name belenios_platform_js)
 (public_name belenios-platform-js)
 (implements belenios_platform)
 (js_of_ocaml
  (javascript_files
   stubs/BigIntCompat.js
   stubs/crypto.js
   ../../../vendor/sjcl/sjcl.js
   ../../../vendor/libsodium/libsodium.js))
 (libraries lwt js_of_ocaml digestif.ocaml hex)
 (preprocessor_deps ../config.mlh)
 (preprocess
  (pps js_of_ocaml-ppx ppx_optcomp)))
