(install
 (files placeholder.png app2.css NavMenu.css MainMenu.css MainZone.css
   avatar.png)
 (section share)
 (package belenios-server))

(install
 (files tool_js.js tool_js_credgen.js tool_js_questions.js tool_js_tkeygen.js
   tool_js_ttkeygen.js tool_js_pd.js tool_js_shuffle.js
   tool_js_fingerprint.js admin_basic.js admin.js home.js checkpriv.js
   belenios_worker.js belenios_jslib.js)
 (section share)
 (package belenios-server))

(rule
 (target tool_js.js)
 (deps ../clients/tool/tool_js.bc.js)
 (action
  (with-stdout-to
   %{target}
   (run ./wrap_tool.sh %{deps}))))

(rule
 (target tool_js_credgen.js)
 (deps ../clients/tool/tool_js_credgen.bc.js)
 (action
  (with-stdout-to
   %{target}
   (run ./wrap_tool.sh %{deps}))))

(rule
 (target tool_js_questions.js)
 (deps ../clients/tool/tool_js_questions.bc.js)
 (action
  (with-stdout-to
   %{target}
   (run ./wrap_tool.sh %{deps}))))

(rule
 (target tool_js_tkeygen.js)
 (deps ../clients/tool/tool_js_tkeygen.bc.js)
 (action
  (with-stdout-to
   %{target}
   (run ./wrap_tool.sh %{deps}))))

(rule
 (target tool_js_ttkeygen.js)
 (deps ../clients/tool/tool_js_ttkeygen.bc.js)
 (action
  (with-stdout-to
   %{target}
   (run ./wrap_tool.sh %{deps}))))

(rule
 (target tool_js_pd.js)
 (deps ../clients/tool/tool_js_pd.bc.js)
 (action
  (with-stdout-to
   %{target}
   (run ./wrap_tool.sh %{deps}))))

(rule
 (target tool_js_shuffle.js)
 (deps ../clients/tool/tool_js_shuffle.bc.js)
 (action
  (with-stdout-to
   %{target}
   (run ./wrap_tool.sh %{deps}))))

(rule
 (target tool_js_fingerprint.js)
 (deps ../clients/tool/tool_js_fingerprint.bc.js)
 (action
  (with-stdout-to
   %{target}
   (run ./wrap_tool.sh %{deps}))))

(rule
 (target admin_basic.js)
 (deps ../clients/basic/admin_basic.bc.js)
 (action
  (with-stdout-to
   %{target}
   (run ./wrap_tool.sh %{deps}))))

(rule
 (target admin.js)
 (deps ../clients/admin/admin.bc.js)
 (action
  (with-stdout-to
   %{target}
   (run ./wrap_tool.sh %{deps}))))

(rule
 (target belenios_jslib.js)
 (deps ../clients/jslib/belenios_jslib.bc.js)
 (action
  (with-stdout-to
   %{target}
   (run ./wrap_tool.sh %{deps}))))

(rule
 (target belenios_worker.js)
 (deps ../clients/worker/belenios_worker.bc.js)
 (action
  (with-stdout-to
   %{target}
   (run ./wrap_tool.sh %{deps}))))

(rule
 (target home.js)
 (deps ../clients/election-home/home.bc.js)
 (action
  (with-stdout-to
   %{target}
   (run ./wrap_tool.sh %{deps}))))

(rule
 (target checkpriv.js)
 (deps ../clients/checkpriv/checkpriv.bc.js)
 (action
  (with-stdout-to
   %{target}
   (run ./wrap_tool.sh %{deps}))))
