(executable
 (name admin_basic)
 (modes js)
 (libraries
  js_of_ocaml-lwt
  js_of_ocaml-tyxml
  belenios-platform-js
  belenios-lib
  belenios-lib.api
  belenios_js)
 (preprocess
  (pps js_of_ocaml-ppx)))

(install
 (files
  (admin_basic.html as static/admin_basic.html))
 (section share)
 (package belenios-server))
