(executable
 (name checkpriv)
 (modes js)
 (js_of_ocaml
  (javascript_files ../../../../ext/sjcl/sjcl.js
    ../../../../ext/jsbn/BigIntCompatFull.js
    ../../../../ext/libsodium/libsodium.js))
 (libraries js_of_ocaml-lwt js_of_ocaml-tyxml belenios-platform-js belenios
   belenios_api belenios_tool_common belenios_js)
 (preprocess
  (pps js_of_ocaml-ppx)))

(install
 (files checkpriv.html)
 (section share)
 (package belenios-server))
