(executable
 (name main)
 (modes js)
 (libraries
  js_of_ocaml-lwt
  js_of_ocaml-tyxml
  belenios-platform-js
  belenios-lib
  belenios-lib.api
  belenios_js)
 (preprocess
  (pps js_of_ocaml-ppx)))

(install
 (files
  (election.html as apps/election.html))
 (section share)
 (package belenios-server))
