(install
 (files
  (belenios-tool.html as static/belenios-tool.html))
 (section share)
 (package belenios-server))

(executable
 (name tool_js_fingerprint)
 (modes js)
 (modules tool_js_fingerprint)
 (js_of_ocaml
  (javascript_files
   ../../../../vendor/sjcl/sjcl.js
   ../../../../vendor/libsodium/libsodium.js))
 (libraries js_of_ocaml-lwt belenios-platform-js belenios-lib belenios_js)
 (preprocess
  (pps js_of_ocaml-ppx)))

(executable
 (name tool_js)
 (modes js)
 (modules tool_js)
 (js_of_ocaml
  (javascript_files
   ../../../../vendor/sjcl/sjcl.js
   ../../../../vendor/libsodium/libsodium.js))
 (libraries js_of_ocaml-lwt belenios-platform-js belenios-lib belenios_js)
 (preprocess
  (pps js_of_ocaml-ppx)))
