(install
 (files
  (belenios-tool.html as static/belenios-tool.html))
 (section share)
 (package belenios-server))

(executable
 (name tool_js_fingerprint)
 (modes js)
 (modules tool_js_fingerprint)
 (libraries js_of_ocaml-lwt belenios-platform-js belenios-lib belenios_js)
 (preprocess
  (pps js_of_ocaml-ppx)))

(executable
 (name tool_js)
 (modes js)
 (modules tool_js)
 (libraries js_of_ocaml-lwt belenios-platform-js belenios-lib belenios_js)
 (preprocess
  (pps js_of_ocaml-ppx)))
